# embedwatch

./: CMakeLists.txt  README.md
Benchmarks/: Makefile  conn_handler.py  count_instr.csv  inputgen.py  instr_measure.py  r2_getbranch.py  r2_getzlines.py  send_file.sh
FunctionInstrumentor/: CMakeLists.txt  FunctionInstrumentor.cpp
InputWrapper/: CMakeLists.txt  InputWrapper.cpp
RecursionTracker/: CMakeLists.txt  RecursionTracker.cpp
SVF/: Makefile  trace.py  trace_ci.py  uaf.py  ztrace_stats.csv
SVF/tools/Example/: CMakeLists.txt  svf-ex.cpp  svf-ex.h  trace.cpp  trace.h  visits.cpp  visits.h
SVF/tools/Uaf/: CMakeLists.txt  svf-uaf.cpp  svf-uaf.h  visits.cpp  visits.h
artifacts/: 9e9e7bb0-02b3-4169-8e57-3d1f881e28e8.ta  finder.py
include/: .gitignore  libzbouncer.h  tee_client_api.h  zbouncer_ta.h
libzbouncer/: Android.mk  CMakeLists.txt
test/: Makefile  Makefile_svf  Makefilecopy.sh  size.csv
verifier/: requirements.txt  verifier.py  wrapper_verifier.sh
wrapped-fn/: wrapped-fn.c
xml-sample/: sample_01.xml  sample_02.xml  sample_03.xml  sample_04.xml  sample_05.xml  sample_06.xml  sample_07.xml  sample_08.xml  sample_09.xml  sample_10.xml  sample_11.xml  sample_12.xml  sample_13.xml  sample_14.xml  sample_15.xml  sample_16.xml  sample_17.xml  sample_18.xml  sample_19.xml  sample_20.xml  sample_21.xml  sample_22.xml  sample_23.xml  sample_24.xml  sample_25.xml  sample_26.xml  sample_27.xml  sample_28.xml  sample_29.xml  sample_30.xml  sample_31.xml  sample_32.xml
zbouncer/: CMakeLists.txt  Zbouncer.cpp
zbouncer-ta/: Android.mk  CMakeLists.txt
(+814 files in other folders)
